src/test/resources/sem/bad/prog5.ilang
type nat is integer

routine main() is
  type nat2 is integer
  nat()
  nat2()
end
